Fixed the show preview button color issue in the dark mode

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -69,7 +69,7 @@ textarea, #preview {
 .primary-button {
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: var(--button-color);
+  background-color: black;
   color: white;
   border: none;
   border-radius: 5px;
